trying to fix scrolling on mobile (testing)

--- a/style.css
+++ b/style.css
@@ -829,7 +829,7 @@ img {
   }
 
   .certificate small {
-    font-size: 0.6rem;
+    font-size: 0.5rem;
   }
 }
 
